--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
         android:icon="@drawable/ic_launcher"
         android:logo="@drawable/ic_overview"
         android:label="@string/app_name"
-        android:name="com.bignerdranch.android.nerdzoo.MainApplication"
+        android:name=".BaseApplication"
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".BaseActivity"
+            android:name=".controller.ZooActivity"
             android:label="@string/app_name"
             android:icon="@drawable/ic_overview">
             <intent-filter>
@@ -19,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".controller.AnimalActivity"
+            android:label="@string/app_name"
+            android:icon="@drawable/ic_overview"/>
 
     </application>
 </manifest>
