--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".controller.ZooActivity"
+            android:name=".controller.MainActivity"
             android:label="@string/app_name"
             android:icon="@drawable/ic_overview">
             <intent-filter>
